refactor: toList implemented